tests/machine/x/hs/map_nested_assign.error

/workspace/mochi/tests/machine/x/hs/map_nested_assign.hs:13:6: error:
    parse error on input ‘=’
   |
13 | data = Map.fromList [("outer", Map.fromList [("inner", 1)])]
   |      ^


Context around line 13:
   11| 
   12| 
   13| data = Map.fromList [("outer", Map.fromList [("inner", 1)])]
   14| 
   15| main :: IO ()
