tests/machine/x/hs/map_nested_assign.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}
module Main where

import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)
import qualified Data.Map as Map
import Data.List (intercalate, isPrefixOf)
import qualified Data.List as List



data = Map.fromList [("outer", Map.fromList [("inner", 1)])]

main :: IO ()
main = do
    let data = 2
    print (fromMaybe (error "missing") (Map.lookup "inner" fromMaybe (error "missing") (Map.lookup "outer" data)))
